--- a/index.html
+++ b/index.html
@@ -71,6 +71,39 @@
                     </div>
                 </a>
 
+                <a href="ar/" class="card">
+                    <div class="card__inner">
+                        <div class="card__inner__expander"></div>
+                        <div class="card__inner__main" style="background-image: url('img/ar.jpg')"></div>
+                        <div class="card__inner__desc">
+                            <h3 class="card__inner__desc__header">AR Furniture Catalogue</h3>
+                            <p class="card__inner__desc__text">
+                                Prototype of an augmented reality furniture catalogue.
+                            </p>
+                            <div class="card__inner__desc__tag">AR, Interaction Design</div>
+                            <div class="card__inner__desc__date">Jan. 2016</div>
+                            <div class="card__inner__desc__supp">
+                                Unity3d
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="lobster/" class="card">
+                    <div class="card__inner">
+                        <div class="card__inner__expander"></div>
+                        <div class="card__inner__main" style="background-image: url('img/lobster.jpg')"></div>
+                        <div class="card__inner__desc">
+                            <h3 class="card__inner__desc__header">Lobster Redesign</h3>
+                            <p class="card__inner__desc__text">
+                                Redesign of the biggest user-generated content marketplace.
+                            </p>
+                            <div class="card__inner__desc__tag">UX/UI Design</div>
+                            <div class="card__inner__desc__date">Sept. 2015</div>
+                        </div>
+                    </div>
+                </a>
+
                 <a href="hashtagmap/" class="card">
                     <div class="card__inner">
                         <div class="card__inner__expander"></div>
@@ -103,21 +136,6 @@
                             <div class="card__inner__desc__supp">
                                 Unity3d
                             </div>
-                        </div>
-                    </div>
-                </a>
-
-                <a href="lobster/" class="card">
-                    <div class="card__inner">
-                        <div class="card__inner__expander"></div>
-                        <div class="card__inner__main" style="background-image: url('img/lobster.jpg')"></div>
-                        <div class="card__inner__desc">
-                            <h3 class="card__inner__desc__header">Lobster Redesign</h3>
-                            <p class="card__inner__desc__text">
-                                Redesign of the biggest user-generated content marketplace.
-                            </p>
-                            <div class="card__inner__desc__tag">UX/UI Design</div>
-                            <div class="card__inner__desc__date">Sept. 2015</div>
                         </div>
                     </div>
                 </a>
