--- a/ar/index.html
+++ b/ar/index.html
@@ -20,8 +20,7 @@
                     <h1 class="header__name">Augmented Reality Furniture Catalogue</h1>
                     <p class="header__description">
                         Together with <a href="http://www.matteolever.com/">Matteo Lever</a>
-                        we designed and implemented a prototype of an augmented reality furniture catalogue for Augmented Reality and Tangible Interfaces course at Paris-Sud University. All items in the magazine are presented with sticky markers. Users can use their mobile phones
-                        to interact with 3d models of furniture.
+                        we designed and implemented a prototype of an augmented reality furniture catalogue for Augmented Reality and Tangible Interfaces course at Paris-Sud University. Each furniture item has a special sticky marker placed on the same page. Users can point a camera of their phones to the marker to see a 3d model of the&nbsp;item and interact with it. Markers can be easily removed from pages and put together to create a model of interior.
                     </p>
                 </div>
 
@@ -33,16 +32,16 @@
                         <img src="img/01.jpg"/>
                     </div>
                     <div class="pictures__item">
-                        <br/>Select an item by tapping.
+                        <br/>Select an item by tapping on it.
                         <img src="img/02.jpg"/>
                         <div class="gesture gesture--tap"></div>
                     </div>
                     <div class="pictures__item">
-                        <br/>Choose one of colors and materials.
+                        Choose one of the color and material options.
                         <img src="img/03.jpg"/>
                     </div>
                     <div class="pictures__item">
-                        <br/>Rotate an item by a flickering gesture.
+                        Rotate an item on 90 degrees by a flickering gesture.
                         <img src="img/04.jpg"/>
                         <div class="gesture gesture--flicker"></div>
                     </div>
@@ -63,5 +62,16 @@
                 </div>
             </div>
         </div>
+        
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-54989348-1', 'auto');
+          ga('send', 'pageview');
+
+        </script>
     </body>
 </html>
