--- a/ar/index.html
+++ b/ar/index.html
@@ -19,8 +19,8 @@
                 <div class="header">
                     <h1 class="header__name">Augmented Reality Furniture Catalogue</h1>
                     <p class="header__description">
-                        Together with <a href="http://www.matteolever.com/">Matteo Lever</a>
-                        we designed and implemented a prototype of an augmented reality furniture catalogue for Augmented Reality and Tangible Interfaces course at Paris-Sud University. Each furniture item has a special sticky marker placed on the same page. Users can point a camera of their phones to the marker to see a 3d model of the&nbsp;item and interact with it. Markers can be easily removed from pages and put together to create a model of interior.
+                        I collaborated with <a href="http://www.matteolever.com/">Matteo Lever</a> to
+                        design and implement a prototype of an augmented reality furniture catalogue as a part of the Augmented Reality and Tangible Interfaces course at the University of Paris-Sud. Each furniture item from the catalogue has a special adhesive marker on the same page. Users can point their smartphone camera to the marker to see a 3d model of the&nbsp;item and interact with it. Markers can be easily removed from each page and put together to create a model of an interior.
                     </p>
                 </div>
 
@@ -28,7 +28,7 @@
 
                 <div class="pictures">
                     <div class="pictures__item">
-                        Point a phone camera to a marker to see a 3d model of a furniture item.
+                        Point a camera to the marker to see the 3d model.
                         <img src="img/01.jpg"/>
                     </div>
                     <div class="pictures__item">
@@ -37,20 +37,20 @@
                         <div class="gesture gesture--tap"></div>
                     </div>
                     <div class="pictures__item">
-                        Choose one of the color and material options.
+                        Choose between available color and material options.
                         <img src="img/03.jpg"/>
                     </div>
                     <div class="pictures__item">
-                        Rotate an item on 90 degrees by a flickering gesture.
+                        Flick left or right to rotate the model 90 degrees.
                         <img src="img/04.jpg"/>
                         <div class="gesture gesture--flicker"></div>
                     </div>
                     <div class="pictures__item">
-                        Move a camera closer to an item to see details.
+                        Find info about the item by moving the camera closer to the marker.
                         <img src="img/05.jpg"/>
                     </div>
                     <div class="pictures__item">
-                        Put a few markers together to immitate a room.
+                        <br/>Design your interior as you wish.
                         <img src="img/06.jpg"/>
                     </div>
                 </div>
@@ -62,7 +62,7 @@
                 </div>
             </div>
         </div>
-        
+
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
