--- a/ar/index.html
+++ b/ar/index.html
@@ -28,7 +28,7 @@
 
                 <div class="pictures">
                     <div class="pictures__item">
-                        Point a camera to the marker to see the 3d model.
+                        Point the camera to the marker to see the 3d model.
                         <img src="img/01.jpg"/>
                     </div>
                     <div class="pictures__item">
