--- a/nesta/test/index.html
+++ b/nesta/test/index.html
@@ -10,6 +10,13 @@
 		<svg class="m-canvas">
 		</svg>
 
+		<div class="m-key">
+			<div class="m-key__color">
+			</div>
+			<div class="m-key__thick">
+			</div>
+		</div>
+
 		<div class="m-filters">
 			<label>
 				Source:
