--- a/nesta/networking_3_2/index.html
+++ b/nesta/networking_3_2/index.html
@@ -6,7 +6,10 @@
 		<title>What are the connections between tech communities in Wales and other parts of the UK?</title>
 	</head>
 	<body>
+		<h3>What are the connections between tech communities in Wales and other parts of the UK?</h3>
+
 		<script src="d3.js" charset="utf-8"></script>
+		<script src="../js/helpers.js"></script>
 		<script src="../js/heatmap.js"></script>
 		<script src="main.js"></script>
 	</body>
