--- a/nesta/research_2/index.html
+++ b/nesta/research_2/index.html
@@ -7,7 +7,9 @@
 		<link rel="stylesheet" type="text/css" href="../css/heatmap.css">
 	</head>
 	<body>
+		<h3>In what research topics do different Welsh local authorities (LADs) have a comparative advantage?</h3>
 		<script src="d3.js" charset="utf-8"></script>
+		<script src="../js/helpers.js"></script>
 		<script src="../js/heatmap.js"></script>
 		<script src="main.js"></script>
 	</body>
