--- a/nesta/trends_2/index.html
+++ b/nesta/trends_2/index.html
@@ -4,19 +4,10 @@
 		<title>What are the hot trends in Welsh tech networking?</title>
 		<meta charset=“utf-8”>
 		<script src="d3.js"></script>
+		<link rel="stylesheet" type="text/css" href="../css/bumpchart.css">
 		<link rel="stylesheet" type="text/css" href="main.css">
 	</head>
 	<body>
-		<svg class="m-canvas">
-		</svg>
-
-		<div class="m-key">
-			<div class="m-key__color">
-			</div>
-			<div class="m-key__thick">
-			</div>
-		</div>
-
 		<div class="m-filters">
 			<label>
 				Source:
@@ -37,20 +28,11 @@
 			<label>
 				<input class="m-filters__top" type="radio" name="show" value="50" /> top 50
 			</label>
-			<hr/>
-
-			Color
-			<label>
-				<input class="m-filters__color" type="radio" name="color" value="trends" checked="checked" /> trends
-			</label>
-			<label>
-				<input class="m-filters__color" type="radio" name="color" value="bw" /> b/w
-			</label>
-			<label>
-				<input class="m-filters__color" type="radio" name="color" value="rainbow" /> rainbow
-			</label>
 		</div>
 
+		<script src="d3.js" charset="utf-8"></script>
+		<script src="../js/helpers.js"></script>
+		<script src="../js/bumpchart.js"></script>
 		<script src="main.js"></script>
 	</body>
 </html>
