--- a/nesta/index.html
+++ b/nesta/index.html
@@ -1,5 +1,5 @@
 <h3>TRENDS</h3>
-1. <a href="trends_1/">How is Wales economy likely to evolve in the near future?</a><br/>
+1. <a href="trends_1_2/">How is Wales economy likely to evolve in the near future?</a><br/>
 2. <a href="trends_2/">What are the hot trends in Welsh tech networking?</a><br/>
 3. What are the hot trends in research in Wales?<br/>
 
