--- a/nesta/research_1/index.html
+++ b/nesta/research_1/index.html
@@ -8,6 +8,10 @@
 	</head>
 	<body>
 		<h3>In what research topics does Wales have a comparative advantage?</h3>
+
+		<div class="m-legend">
+		</div>
+
 		<script src="d3.js" charset="utf-8"></script>
 		<script src="../js/helpers.js"></script>
 		<script src="../js/datareader.js"></script>
