--- a/nesta/index.html
+++ b/nesta/index.html
@@ -12,7 +12,8 @@
 <h3>NETWORKING</h3>
 1. What is the structure of tech community networking in Wales?<br/>
 2. How have these tech networks changed over time?</br>
-3. <a href="networking_3_2/">What are the connections between tech communities in Wales and other parts of the UK?</a></br>
+3. <a href="networking_3_2/">What are the connections between tech communities in Wales and other parts of the UK?</a> |
+<a href="networking_3/">map</a></br>
 4. What is the comparative advantage in different tech topics in Wales?</br>
 5. What is the comparative advantage of different tech topics within local districts (LADs)?<br/>
 
