--- a/nesta/index.html
+++ b/nesta/index.html
@@ -14,8 +14,8 @@
 2. How have these tech networks changed over time?</br>
 3. <a href="networking_3_2/">What are the connections between tech communities in Wales and other parts of the UK?</a> |
 <a href="networking_3/">map</a></br>
-4. What is the comparative advantage in different tech topics in Wales?</br>
-5. What is the comparative advantage of different tech topics within local districts (LADs)?<br/>
+4 and 5. <a href="networking_45/">What is the comparative advantage in different tech topics in Wales?</br>
+What is the comparative advantage of different tech topics within local districts (LADs)?</a><br/>
 
 <h3>RESEARCH</h3>
 1. <a href="research_1/">In what research topics does Wales have a comparative advantage?</a><br/>
@@ -25,8 +25,5 @@
 <h3>CONTENT</h3>
 1. How do Welsh local economies perform compared to the rest of the UK in key social and economic contextual variables?<br/>
 2. How economic complexities are affecting salary across Wales?<br/>
-3. How sectoral composition of local economies are evolving?<br/>
-4. What is the evolution of specialisation in local authorities in Wales?<br/>
-5. What are the relationships between research networks and collaborations?<br/>
 
 <br/><br/><br/>
