--- a/nesta/index.html
+++ b/nesta/index.html
@@ -1,29 +1,29 @@
 <h3>TRENDS</h3>
-1. <a href="trends_1_2/">How is Wales economy likely to evolve in the near future?</a><br/>
-2. <a href="trends_2/">What are the hot trends in Welsh tech networking?</a><br/>
-3. What are the hot trends in research in Wales?<br/>
+1. <a href="trends_1_2/">How is Wales economy likely to evolve in the near future? | Treemap</a><br/>
+2. <a href="trends_2/">What are the hot trends in Welsh tech networking? | Bumpchart</a><br/>
+3. What are the hot trends in research in Wales? | Bubblechart<br/>
 
 <h3>INDUSTRY</h3>
-1. How are different industries in Welsh economy evolving?<br/>
-2. In what industries does Wales have a comparative advantage?<br/>
-3. What are the comparative advantages of different local authorities in Wales?<br/>
-4. Is the fundamental structure of the Welsh economy changing?<br/>
-
-<h3>NETWORKING</h3>
-1. What is the structure of tech community networking in Wales?<br/>
-2. How have these tech networks changed over time?</br>
-3. <a href="networking_3_2/">What are the connections between tech communities in Wales and other parts of the UK?</a> |
-<a href="networking_3/">map</a></br>
-4 and 5. <a href="networking_45/">What is the comparative advantage in different tech topics in Wales?</br>
-What is the comparative advantage of different tech topics within local districts (LADs)?</a><br/>
+1. How are different industries in Welsh economy evolving? | Stacked barchart<br/>
+2. In what industries does Wales have a comparative advantage? | Barchart+<br/>
+3. What are the comparative advantages of different local authorities in Wales? | GeoVis bivariate colorpleth<br/>
+4. Is the fundamental structure of the Welsh economy changing? | GeoVis bivariate colorpleth<br/>
 
 <h3>RESEARCH</h3>
-1. <a href="research_1/">In what research topics does Wales have a comparative advantage?</a><br/>
-2. <a href="research_2/">In what research topics do different Welsh local authorities (LADs) have a comparative advantage?</a><br/>
-3. What are the opportunities for collaboration in Welsh research networks?<br/>
+1. <a href="research_1/">In what research topics does Wales have a comparative advantage? | Bubblechart</a><br/>
+2. <a href="research_2/">In what research topics do different Welsh local authorities (LADs) have a comparative advantage? | Heatmap</a><br/>
+3. What are the opportunities for collaboration in Welsh research networks? | Heatmap<br/>
+
+<h3>NETWORKING</h3>
+1. <a href="networking_1/">What is the structure of tech community networking in Wales? | Force-directed graph</a><br/>
+2. How have these tech networks changed over time? | Chord digram</br>
+3. <a href="networking_3_2/">What are the connections between tech communities in Wales and other parts of the UK? | GeoVis</a> |
+<a href="networking_3/">map</a></br>
+4 and 5. <a href="networking_45/">What is the comparative advantage in different tech topics in Wales?</br>
+What is the comparative advantage of different tech topics within local districts (LADs)? | GeoVis</a><br/>
 
 <h3>CONTENT</h3>
-1. How do Welsh local economies perform compared to the rest of the UK in key social and economic contextual variables?<br/>
-2. How economic complexities are affecting salary across Wales?<br/>
+1. How do Welsh local economies perform compared to the rest of the UK in key social and economic contextual variables? | Bubblechart<br/>
+2. How economic complexities are affecting salary across Wales? | Bubblechart<br/>
 
 <br/><br/><br/>
