--- a/nesta/index.html
+++ b/nesta/index.html
@@ -17,8 +17,8 @@
 <h3>NETWORKING</h3>
 1. <a href="networking_1/">What is the structure of tech community networking in Wales? | Force-directed graph</a><br/>
 2. How have these tech networks changed over time? | Chord digram</br>
-3. <a href="networking_3_2/">What are the connections between tech communities in Wales and other parts of the UK? | GeoVis</a> |
-<a href="networking_3/">map</a></br>
+3. <a href="networking_3_2/">What are the connections between tech communities in Wales and other parts of the UK? | Heatmap</a> |
+<a href="networking_3/">GeoVis</a></br>
 4 and 5. <a href="networking_45/">What is the comparative advantage in different tech topics in Wales?</br>
 What is the comparative advantage of different tech topics within local districts (LADs)? | GeoVis</a><br/>
 
