--- a/nesta/networking_3_2/index.html
+++ b/nesta/networking_3_2/index.html
@@ -10,6 +10,7 @@
 
 		<script src="d3.js" charset="utf-8"></script>
 		<script src="../js/helpers.js"></script>
+		<script src="../js/datareader.js"></script>
 		<script src="../js/heatmap.js"></script>
 		<script src="main.js"></script>
 	</body>
