--- a/nesta/networking_5/index.html
+++ b/nesta/networking_5/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="../css/geovis.css">
 	</head>
 	<body>
+		<h1 class="title">What is the comparative advantage in different tech topics in Wales?</h1>
 		<script src="d3.js" charset="utf-8"></script>
 		<script src="../js/topojson.js"></script>
 		<script src="../js/helpers.js"></script>
