--- a/nesta/trends_1_2/index.html
+++ b/nesta/trends_1_2/index.html
@@ -4,7 +4,7 @@
 		<title>How is Wales economy likely to evolve in the near future?</title>
 		<meta charset=“utf-8”>
 		<script src="d3.js"></script>
-		<link rel="stylesheet" type="text/css" href="main.css">
+		<link rel="stylesheet" type="text/css" href="../css/treemap.css">
 	</head>
 	<body>
 		<h3>How is Wales economy likely to evolve in the near future?</h3>
@@ -28,7 +28,7 @@
 
 			<hr/>
 			<label>
-				<input class="m-filters__cities" type="checkbox" name="show" checked="checked" /> Show cities
+				<input class="m-filters__cities" type="checkbox" name="show" checked="checked" /> Show LADs
 			</label>
 		</div>
 
