--- a/nesta/networking_4/index.html
+++ b/nesta/networking_4/index.html
@@ -9,7 +9,7 @@
 			What is the comparative advantage in different tech topics in Wales?<br/>
 			What is the comparative advantage of different tech topics within local districts (LADs)?
 		</h1>
-		<script src="d3.js" charset="utf-8"></script>
+		<script src="../js/d3.js" charset="utf-8"></script>
 		<script src="../js/topojson.js"></script>
 		<script src="../js/helpers.js"></script>
 		<script src="../js/datareader.js"></script>
