--- a/nesta/trends_1/index.html
+++ b/nesta/trends_1/index.html
@@ -3,7 +3,6 @@
 	<head>
 		<title>How is Wales economy likely to evolve in the near future?</title>
 		<meta charset=“utf-8”>
-		<script src="d3.js"></script>
 		<link rel="stylesheet" type="text/css" href="main.css">
 	</head>
 	<body>
@@ -31,7 +30,7 @@
 			</label>
 		</div>
 
-		<script src="d3.js" charset="utf-8"></script>
+		<script src="../js/d3.js" charset="utf-8"></script>
 		<script src="../js/helpers.js"></script>
 		<script src="../js/datareader.js"></script>
 		<script src="main.js"></script>
