--- a/nesta/trends_2/index.html
+++ b/nesta/trends_2/index.html
@@ -3,7 +3,6 @@
 	<head>
 		<title>What are the hot trends in Welsh tech networking?</title>
 		<meta charset=“utf-8”>
-		<script src="d3.js"></script>
 		<link rel="stylesheet" type="text/css" href="../css/bumpchart.css">
 		<link rel="stylesheet" type="text/css" href="main.css">
 	</head>
@@ -17,21 +16,9 @@
 					<option value="wales_tags_betweenness_centrality.csv">betweenness_centrality</option>
 				</select>
 			</label>
-			<hr/>
-
-			Show
-			<label>
-				<input class="m-filters__top" type="radio" name="show" value="10" checked="checked" /> top 10
-			</label>
-			<label>
-				<input class="m-filters__top" type="radio" name="show" value="20" /> top 20
-			</label>
-			<label>
-				<input class="m-filters__top" type="radio" name="show" value="50" /> top 50
-			</label>
 		</div>
 
-		<script src="d3.js" charset="utf-8"></script>
+		<script src="../js/d3.js" charset="utf-8"></script>
 		<script src="../js/helpers.js"></script>
 		<script src="../js/bumpchart.js"></script>
 		<script src="main.js"></script>
