--- a/nesta/trends_2/index.html
+++ b/nesta/trends_2/index.html
@@ -5,6 +5,10 @@
 		<meta charset=“utf-8”>
 		<link rel="stylesheet" type="text/css" href="../css/bumpchart.css">
 		<link rel="stylesheet" type="text/css" href="main.css">
+
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.1/css/select2.min.css" rel="stylesheet" />
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.1/js/select2.min.js"></script>
 	</head>
 	<body>
 		<h3>What are the hot trends in Welsh tech networking?</h3>
@@ -14,6 +18,10 @@
 				<select class="m-filters__source">
 					<option value="wales_tags_eigenvector_centrality.csv">eigenvector_centrality</option>
 					<option value="wales_tags_betweenness_centrality.csv">betweenness_centrality</option>
+				</select>
+				<hr/>
+				Search<br/>
+				<select id="searchbox">
 				</select>
 			</label>
 		</div>
