--- a/nesta/networking_1/index.html
+++ b/nesta/networking_1/index.html
@@ -3,10 +3,13 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="../css/forcegraph.css">
+		<link rel="stylesheet" type="text/css" href="main.css">
 		<title>What is the structure of tech community networking in Wales?</title>
 	</head>
 	<body>
-		<script src="d3.js" charset="utf-8"></script>
+		<h1>What is the structure of tech community networking in Wales?</h1>
+		<h2>Wales Group Topics (?) 2013 &mdash; 2016</h2>
+		<script src="../js/d3.js" charset="utf-8"></script>
 		<script src="../js/helpers.js"></script>
 		<script src="../js/datareader.js"></script>
 		<script src="../js/forcegraph.js"></script>
