--- a/nesta/index.html
+++ b/nesta/index.html
@@ -16,7 +16,7 @@
 
 <h3>NETWORKING</h3>
 1. <a href="networking_1/">What is the structure of tech community networking in Wales? | Force-directed graph</a><br/>
-2. How have these tech networks changed over time? | Chord digram</br>
+2. <a href="networking_2/">How have these tech networks changed over time? | Chord digram</a></br>
 3. <a href="networking_3_2/">What are the connections between tech communities in Wales and other parts of the UK? | Heatmap</a> |
 <a href="networking_3/">GeoVis</a></br>
 4 and 5. <a href="networking_4/">What is the comparative advantage in different tech topics in Wales?</br>
