--- a/nesta/industry_1/index.html
+++ b/nesta/industry_1/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="../css/stacked.css">
+		<link rel="stylesheet" type="text/css" href="main.css">
 		<title>How are different industries in Welsh economy evolving?</title>
 	</head>
 	<body>
