--- a/nesta/index.html
+++ b/nesta/index.html
@@ -6,7 +6,7 @@
 <h3>INDUSTRY</h3>
 1. <a href="industry_1/">How are different industries in Welsh economy evolving? | Stacked barchart</a><br/>
 2. <a href="industry_2/">In what industries does Wales have a comparative advantage? | Barchart+</a><br/>
-3. What are the comparative advantages of different local authorities in Wales? | GeoVis bivariate colorpleth<br/>
+3. <a href="industry_3/">What are the comparative advantages of different local authorities in Wales? | GeoVis bivariate colorpleth</a><br/>
 4. Is the fundamental structure of the Welsh economy changing? | GeoVis bivariate colorpleth<br/>
 
 <h3>RESEARCH</h3>
