--- a/nesta/index.html
+++ b/nesta/index.html
@@ -22,8 +22,8 @@
 4 and 5. <a href="networking_4/">What is the comparative advantage in different tech topics in Wales?</br>
 What is the comparative advantage of different tech topics within local districts (LADs)? | GeoVis</a><br/>
 
-<h3>CONTENT</h3>
+<h3>CONTEXT</h3>
 1. How do Welsh local economies perform compared to the rest of the UK in key social and economic contextual variables? | Bubblechart<br/>
-2. How economic complexities are affecting salary across Wales? | Bubblechart<br/>
+2. <a href="context_2/">How economic complexities are affecting salary across Wales? | Bubblechart</a><br/>
 
 <br/><br/><br/>
