--- a/nesta/index.html
+++ b/nesta/index.html
@@ -12,7 +12,7 @@
 <h3>RESEARCH</h3>
 1. <a href="research_1/">In what research topics does Wales have a comparative advantage? | Bubblechart</a><br/>
 2. <a href="research_2/">In what research topics do different Welsh local authorities (LADs) have a comparative advantage? | Heatmap</a><br/>
-3. What are the opportunities for collaboration in Welsh research networks? | Heatmap<br/>
+3. <a href="research_3/">What are the opportunities for collaboration in Welsh research networks? | Heatmap</a><br/>
 
 <h3>NETWORKING</h3>
 1. <a href="networking_1/">What is the structure of tech community networking in Wales? | Force-directed graph</a><br/>
