--- a/nesta/research_3/index.html
+++ b/nesta/research_3/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>In what research topics do different Welsh local authorities (LADs) have a comparative advantage?</title>
+		<title>What are the opportunities for collaboration in Welsh research networks?</title>
 		<meta charset=“utf-8”>
+		<link rel="stylesheet" type="text/css" href="../css/filter.css">
 		<link rel="stylesheet" type="text/css" href="../css/heatmap.css">
 	</head>
 	<body>
-		<h3>In what research topics do different Welsh local authorities (LADs) have a comparative advantage?</h3>
+		<h3>What are the opportunities for collaboration in Welsh research networks?</h3>
+		<div class="filter"></div>
+		
 		<script src="../js/d3.js" charset="utf-8"></script>
 		<script src="../js/helpers.js"></script>
+		<script src="../js/filter.js"></script>
 		<script src="../js/datareader.js"></script>
 		<script src="../js/heatmap.js"></script>
 		<script src="main.js"></script>
