--- a/nesta/index.html
+++ b/nesta/index.html
@@ -1,7 +1,7 @@
 <h3>TRENDS</h3>
 1. <a href="trends_1_2/">How is Wales economy likely to evolve in the near future? | Treemap</a><br/>
 2. <a href="trends_2/">What are the hot trends in Welsh tech networking? | Bumpchart</a><br/>
-3. What are the hot trends in research in Wales? | Bubblechart<br/>
+3. <a href="trends_3/">What are the hot trends in research in Wales? | Bumpchart</a><br/>
 
 <h3>INDUSTRY</h3>
 1. <a href="industry_1/">How are different industries in Welsh economy evolving? | Stacked barchart</a><br/>
