--- a/nesta/industry_3/index.html
+++ b/nesta/industry_3/index.html
@@ -3,15 +3,23 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="../css/geovis.css">
+		<link rel="stylesheet" type="text/css" href="../css/filter.css">
 		<title>What are the comparative advantages of different local authorities in Wales?</title>
+
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.1/css/select2.min.css" rel="stylesheet" />
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.1/js/select2.min.js"></script>
 	</head>
 	<body>
 		<h3 class="title">What are the comparative advantages of different local authorities in Wales?</h3>
+		<div class="filter">
+		</div>
 
-		<script src="d3.js" charset="utf-8"></script>
+		<script src="../js/d3.js" charset="utf-8"></script>
 		<script src="../js/helpers.js"></script>
 		<script src="../js/datareader.js"></script>
 		<script src="../js/topojson.js"></script>
+		<script src="../js/filter.js"></script>
 		<script src="../js/bivariate.js"></script>
 		<script src="main.js"></script>
 	</body>
