--- a/nesta/index.html
+++ b/nesta/index.html
@@ -7,7 +7,7 @@
 1. <a href="industry_1/">How are different industries in Welsh economy evolving? | Stacked barchart</a><br/>
 2. <a href="industry_2/">In what industries does Wales have a comparative advantage? | Barchart+</a><br/>
 3. <a href="industry_3/">What are the comparative advantages of different local authorities in Wales? | GeoVis bivariate colorpleth</a><br/>
-4. Is the fundamental structure of the Welsh economy changing? | GeoVis bivariate colorpleth<br/>
+4. <a href="industry_4/">Is the fundamental structure of the Welsh economy changing? | GeoVis bivariate colorpleth</a><br/>
 
 <h3>RESEARCH</h3>
 1. <a href="research_1/">In what research topics does Wales have a comparative advantage? | Bubblechart</a><br/>
