--- a/nesta/index.html
+++ b/nesta/index.html
@@ -23,7 +23,7 @@
 What is the comparative advantage of different tech topics within local districts (LADs)? | GeoVis</a><br/>
 
 <h3>CONTEXT</h3>
-1. How do Welsh local economies perform compared to the rest of the UK in key social and economic contextual variables? | Bubblechart<br/>
+1. <a href="context_1/">How do Welsh local economies perform compared to the rest of the UK in key social and economic contextual variables? | Bubblechart</a><br/>
 2. <a href="context_2/">How economic complexities are affecting salary across Wales? | Bubblechart</a><br/>
 
 <br/><br/><br/>
