--- a/nesta/networking_2/index.html
+++ b/nesta/networking_2/index.html
@@ -1,17 +1,25 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
 	<head>
-		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="../css/chord.css">
-		<link rel="stylesheet" type="text/css" href="main.css">
 		<title>How have this tech networks changed over time?</title>
+		<meta charset=“utf-8”>
+		<link rel="stylesheet" type="text/css" href="../css/arcchart.css">
+		<link rel="stylesheet" type="text/css" href="../css/filter.css">
+
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.1/css/select2.min.css" rel="stylesheet" />
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.1/js/select2.min.js"></script>
 	</head>
 	<body>
-		<h1>How have this tech networks changed over time?</h1>
+		<h3>How have this tech networks changed over time?</h3>
+		<div class="filter"></div>
+
 		<script src="../js/d3.js" charset="utf-8"></script>
 		<script src="../js/helpers.js"></script>
+		<script src="../js/colorpalette.js"></script>
+		<script src="../js/filter.js"></script>
 		<script src="../js/datareader.js"></script>
-		<script src="../js/chord.js"></script>
+		<script src="../js/arcchart.js"></script>
 		<script src="main.js"></script>
 	</body>
 </html>
