--- a/nesta/networking_1/index.html
+++ b/nesta/networking_1/index.html
@@ -4,15 +4,24 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="../css/forcegraph.css">
 		<link rel="stylesheet" type="text/css" href="main.css">
+		<link rel="stylesheet" type="text/css" href="../css/filter.css">
+
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.1/css/select2.min.css" rel="stylesheet" />
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.1/js/select2.min.js"></script>
+
 		<title>What is the structure of tech community networking in Wales?</title>
 	</head>
 	<body>
 		<h1>What is the structure of tech community networking in Wales?</h1>
 		<h2>Wales Group Topics (?) 2013 &mdash; 2016</h2>
+		<div class="filter"></div>
+
 		<script src="../js/d3.js" charset="utf-8"></script>
 		<script src="../js/helpers.js"></script>
-		<script src="../js/datareader.js"></script>
 		<script src="../js/forcegraph.js"></script>
+		<script src="../js/filter.js"></script>
+		<script src="../js/datareader.js"></script>
 		<script src="main.js"></script>
 	</body>
 </html>
