--- a/nesta/networking_1/index.html
+++ b/nesta/networking_1/index.html
@@ -13,8 +13,9 @@
 		<title>What is the structure of tech community networking in Wales?</title>
 	</head>
 	<body>
-		<h1>What is the structure of tech community networking in Wales?</h1>
-		<h2>Wales Group Topics (?) 2013 &mdash; 2016</h2>
+		<h1 class="title">What is the structure of tech community networking in Wales?</h1>
+		<h2 class="subtitle">Wales Group Topics (?) 2013 &mdash; 2016</h2>
+		<div class="loading">Loading data</div>
 		<div class="filter"></div>
 
 		<script src="../js/d3.js" charset="utf-8"></script>
