--- a/nesta/networking_3/index.html
+++ b/nesta/networking_3/index.html
@@ -2,11 +2,25 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="main.css">
+		<link rel="stylesheet" type="text/css" href="../css/geovis.css">
+		<link rel="stylesheet" type="text/css" href="../css/filter.css">
+		<title>What are the connections between tech communities in Wales and other parts of the UK?</title>
+
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.1/css/select2.min.css" rel="stylesheet" />
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.1/js/select2.min.js"></script>
 	</head>
 	<body>
-		<script src="d3.js" charset="utf-8"></script>
-		<script src="topojson.js"></script>
+		<h3 class="title">What are the connections between tech communities in Wales and other parts of the UK?</h3>
+		<div class="filter">
+		</div>
+
+		<script src="../js/d3.js" charset="utf-8"></script>
+		<script src="../js/helpers.js"></script>
+		<script src="../js/datareader.js"></script>
+		<script src="../js/topojson.js"></script>
+		<script src="../js/filter.js"></script>
+		<script src="../js/geovis.js"></script>
 		<script src="main.js"></script>
 	</body>
 </html>
