--- a/nesta/trends_2/index.html
+++ b/nesta/trends_2/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>What are the hot trends in Welsh tech networking?</title>
 		<meta charset=“utf-8”>
-		<link rel="stylesheet" type="text/css" href="../css/bumpchart.css">
+		<link rel="stylesheet" type="text/css" href="../css/bumpchart2.css">
 		<link rel="stylesheet" type="text/css" href="../css/filter.css">
 
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -20,7 +20,7 @@
 		<script src="../js/colorpalette.js"></script>
 		<script src="../js/filter.js"></script>
 		<script src="../js/datareader.js"></script>
-		<script src="../js/bumpchart.js"></script>
+		<script src="../js/bumpchart2.js"></script>
 		<script src="main.js"></script>
 	</body>
 </html>
