--- a/nesta/trends_2/index.html
+++ b/nesta/trends_2/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>What are the hot trends in Welsh tech networking?</title>
+		<title>What are the tech networking trends in Wales?</title>
 		<meta charset=“utf-8”>
 		<link rel="stylesheet" type="text/css" href="../css/bumpchart2.css">
 		<link rel="stylesheet" type="text/css" href="../css/filter.css">
@@ -11,7 +11,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.1/js/select2.min.js"></script>
 	</head>
 	<body>
-		<h3>What are the hot trends in Welsh tech networking?</h3>
+		<h3>What are the tech networking trends in Wales?</h3>
 		<div class="filter">
 		</div>
 
