--- a/nesta/networking_1/index.html
+++ b/nesta/networking_1/index.html
@@ -22,6 +22,7 @@
 
 		<script src="../js/d3.js" charset="utf-8"></script>
 		<script src="../js/helpers.js"></script>
+		<script src="../js/colorpalette.js"></script>
 		<script src="../js/forcegraph.js"></script>
 		<script src="../js/filter.js"></script>
 		<script src="../js/datareader.js"></script>
