--- a/nesta/networking_2/index.html
+++ b/nesta/networking_2/index.html
@@ -16,6 +16,9 @@
 	<body>
 		<h3>How have this tech networks changed over time?</h3>
 		<div class="filter"></div>
+		<div class="tooltip">
+			
+		</div>
 
 		<script src="../js/d3.js" charset="utf-8"></script>
 		<script src="../js/helpers.js"></script>
