--- a/nesta/networking_3/index.html
+++ b/nesta/networking_3/index.html
@@ -16,9 +16,11 @@
 		</div>
 
 		<script src="../js/d3.js" charset="utf-8"></script>
+		<script src="../js/d3-ForceEdgeBundling.js"></script>
 		<script src="../js/helpers.js"></script>
 		<script src="../js/datareader.js"></script>
 		<script src="../js/topojson.js"></script>
+		<script src="../js/colorpalette.js"></script>
 		<script src="../js/filter.js"></script>
 		<script src="../js/geovis.js"></script>
 		<script src="main.js"></script>
