--- a/nesta/industry_3/index.html
+++ b/nesta/industry_3/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="../css/geovis.css">
+		<link rel="stylesheet" type="text/css" href="../css/bivariate.css">
 		<link rel="stylesheet" type="text/css" href="../css/filter.css">
 		<title>What are the comparative advantages of different local authorities in Wales?</title>
 
