--- a/nesta/networking_1/index.html
+++ b/nesta/networking_1/index.html
@@ -17,7 +17,7 @@
 	</head>
 	<body>
 		<h3>What is the structure of tech community networking in Wales?</h3>
-		<div class="vislayout">
+		<!--div class="vislayout">
 			<div class="vislayout__main">
 				<svg class="vis"></svg>
 				<div class="vislayout__loading"></div>
@@ -25,7 +25,9 @@
 			<div class="vislayout__panel">
 				<div class="filter"></div>
 			</div>
-		</div>
+		</div-->
+		<svg class="vis"></svg>
+		<div class="filter"></div>
 
 		<script src="../js/vislayout.js" charset="utf-8"></script>
 		<script src="../js/d3.js" charset="utf-8"></script>
