--- a/nesta/networking_1/index.html
+++ b/nesta/networking_1/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="../css/vislayout.css">
+		<link rel="stylesheet" type="text/css" href="../css/tooltip.css">
 		<link rel="stylesheet" type="text/css" href="../css/forcegraph.css">
 		<link rel="stylesheet" type="text/css" href="../css/filter.css">
 
@@ -17,19 +17,10 @@
 	</head>
 	<body>
 		<h3>What is the structure of tech community networking in Wales?</h3>
-		<!--div class="vislayout">
-			<div class="vislayout__main">
-				<svg class="vis"></svg>
-				<div class="vislayout__loading"></div>
-			</div>
-			<div class="vislayout__panel">
-				<div class="filter"></div>
-			</div>
-		</div-->
 		<svg class="vis"></svg>
 		<div class="filter"></div>
 
-		<script src="../js/vislayout.js" charset="utf-8"></script>
+		<script src="../js/tooltip.js" charset="utf-8"></script>
 		<script src="../js/d3.js" charset="utf-8"></script>
 		<script src="../js/helpers.js"></script>
 		<script src="../js/colorpalette.js"></script>
