--- a/nesta/networking_4/index.html
+++ b/nesta/networking_4/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="../css/geovis.css">
+		<link rel="stylesheet" type="text/css" href="../css/bivariate.css">
 	</head>
 	<body>
 		<h1 class="title">
