--- a/nesta/networking_3/index.html
+++ b/nesta/networking_3/index.html
@@ -11,7 +11,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.1/js/select2.min.js"></script>
 	</head>
 	<body>
-		<h3 class="title">What are the connections between tech communities in Wales and other parts of the UK?</h3>
+		<!--h3 class="title">What are the connections between tech communities in Wales and other parts of the UK?</h3-->
 		<div class="filter">
 		</div>
 
