--- a/duma/en/index.html
+++ b/duma/en/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>Russian State Duma</title>
+        <title>The Russian State Duma</title>
 
         <meta charset="UTF-8">
-        <meta name="description" content="Visualization of the lower house of the Federal Assembly of Russia (parliament) structure">
+        <meta name="description" content="Visualization of the structure of the lower house of the Federal Assembly (parliament) of Russia">
         <meta name="keywords" content="duma,russia,parliament,infovis,дума,рф,россия,парламент,визуализация">
         <meta name="author" content="Petr Devaikin">
 
@@ -14,7 +14,7 @@
 
         <meta property="og:title" content="Russian State Duma" />
         <meta property="og:type" content="website" />
-        <meta property="og:description" content="Visualization of the lower house of the Federal Assembly of Russia (parliament) structure" />
+        <meta property="og:description" content="Visualization of the structure of the lower house of the Federal Assembly (parliament) of Russia" />
         <meta property="og:url" content="http://petrdevaikin.com/duma/en/" />
         <meta property="og:image" content="http://petrdevaikin.com/duma/screen.jpg" />
 
@@ -33,7 +33,7 @@
     </head>
     <body>
         <div id="wrap">
-            <h1>Russian State Duma</h1>
+            <h1>The Russian State Duma</h1>
             <div id="diagram">
                 <svg>
                     <defs>
