--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>Information visualization, UX and Interaction Design | Petr Devaikin</title>
+        <title>Creative Coding, Interaction Design | Petr Devaikin</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
         <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
@@ -19,7 +19,7 @@
                             </h1>
                         </div>
                         <div class="card__inner__desc">
-                            <h3 class="card__inner__desc__header">Information Visualization, UX and Interaction Design</h3>
+                            <h3 class="card__inner__desc__header">Creative Coding, Interaction Design</h3>
                             <ul class="card__inner__desc__text">
                                 <li>
                                     <a href="mailto:p.devaikin@gmail.com">p.devaikin@gmail.com</a>
