--- a/index.html
+++ b/index.html
@@ -12,28 +12,32 @@
         <link rel="stylesheet" type="text/css" href="css/reset.css">
         <link rel="stylesheet" type="text/css" href="css/main.css">
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>
+
+        <script src="js/signals.min.js"></script>
+        <script src="js/hasher.min.js"></script>
+        <script src="js/main.js"></script>
     </head>
     <body>
         <div class="menu">
             <h1 class="menu__header">Petr Devaikin</h1>
             <ul class="menu__main">
                 <li>
-                    <a href="/interaction">Interaction design</a>
+                    <a href="#interaction">Interaction design</a>
                 </li>
                 <li>
-                    <a href="/creative">Creative coding</a>
+                    <a href="#creative">Creative coding</a>
                 </li>
                 <li>
-                    <a href="/infovis">Information visualisation</a>
+                    <a href="#infovis">Information visualisation</a>
                 </li>
                 <li>
-                    <a href="/vr">Virtual and augmented</a>
+                    <a href="#vr">Virtual and augmented</a>
                 </li>
                 <li>
-                    <a href="/affective">Affective computing</a>
+                    <a href="#affective">Affective computing</a>
                 </li>
                 <li>
-                    <a href="/ux">UX and UI</a>
+                    <a href="#ux">UX and UI</a>
                 </li>
             </ul>
             <div class="menu__footer">
