--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
 
         <div class="content">
-            <div class="project" data-type="infovis" year="2017">
+            <div class="project" data-type="infovis" data-year="2017">
                 <h2 class="project__title"><a href="https://arloesiadur.org/">Visualizations for Arloesiadur</a></h2>
                 <p class="project__desc">
                     Interactive visualizations for Arloesiadur, Nesta, Infogr8.<br/>
@@ -71,7 +71,7 @@
                 <p class="project__year">2017</p>
             </div>
 
-            <div class="project" data-type="interaction,affective" year="2017">
+            <div class="project" data-type="interaction,affective" data-year="2017">
                 <h2 class="project__title"><a href="https://arloesiadur.org/">Dating App and Emotions</a></h2>
                 <p class="project__desc">
                     ... Study ... . Student project.
@@ -84,7 +84,7 @@
                 <p class="project__year">2017</p>
             </div>
 
-            <div class="project" data-type="infovis" year="2016">
+            <div class="project" data-type="infovis" data-year="2016">
                 <h2 class="project__title"><a href="duma/en/">The Russian State Duma</a></h2>
                 <p class="project__desc">
                     Interactive visualization of the&nbsp;lower house of&nbsp;the&nbsp;Federal Assembly of&nbsp;Russia (parliament) structure.
@@ -98,7 +98,7 @@
                 <p class="project__year">2016</p>
             </div>
 
-            <div class="project" data-type="vr" year="2016">
+            <div class="project" data-type="vr" data-year="2016">
                 <h2 class="project__title"><a href="https://www.youtube.com/watch?v=RNfj8bh07TU">Beauty of Destruction</a></h2>
                 <p class="project__desc">
                     VR Game for <a href="http://www.artificialrome.com/" target="_blank" >Artificial Rome</a> open studio event.
@@ -111,7 +111,7 @@
                 <p class="project__year">2016</p>
             </div>
 
-            <div class="project" data-type="interaction,creative" year="2016">
+            <div class="project" data-type="interaction,creative" data-year="2016">
                 <h2 class="project__title"><a href="movement/">Æ-movement</a></h2>
                 <p class="project__desc">
                     Real-time visualization of body performance created to emphasize uniqueness and temporality of the movement by immersing users in full body aesthetic experience.
@@ -125,7 +125,7 @@
                 <p class="project__year">2016</p>
             </div>
 
-            <div class="project" data-type="interaction,vr" year="2016">
+            <div class="project" data-type="interaction,vr" data-year="2016">
                 <h2 class="project__title"><a href="ar/">AR Furniture Catalogue</a></h2>
                 <p class="project__desc">
                     Prototype of an augmented reality furniture catalogue. Student project.
@@ -139,7 +139,7 @@
                 <p class="project__year">2016</p>
             </div>
 
-            <div class="project" data-type="ux" year="2015">
+            <div class="project" data-type="ux" data-year="2015">
                 <h2 class="project__title"><a href="#">Lobster Redesign</a></h2>
                 <p class="project__desc">
                     Redesign of the biggest user-generated content marketplace.
@@ -153,7 +153,7 @@
                 <p class="project__year">2015</p>
             </div>
 
-            <div class="project" data-type="creative" year="2014">
+            <div class="project" data-type="creative" data-year="2014">
                 <h2 class="project__title"><a href="puzzla/">Puzzla</a></h2>
                 <p class="project__desc">
                     Tool for ... .
@@ -166,7 +166,7 @@
                 <p class="project__year">2014</p>
             </div>
 
-            <div class="project" data-type="infovis" year="2014">
+            <div class="project" data-type="infovis" data-year="2014">
                 <h2 class="project__title"><a href="hashtagmap/">Hashtag Map</a></h2>
                 <p class="project__desc">
                     Visual representation of one day in a big city: Moscow, Berlin, Saint&nbsp;Petersburg and London.
@@ -179,7 +179,7 @@
                 <p class="project__year">2014</p>
             </div>
 
-            <div class="project" data-type="infovis" year="2014">
+            <div class="project" data-type="infovis" data-year="2014">
                 <h2 class="project__title">Max Katz Crowdfunding Campaign. <a href="katz/eng/">People</a> and <a href="katz/eng/timeline/">Timeline</a></h2>
                 <p class="project__desc">
                     Visualization of the <a href="http://maxkatz.livejournal.com/" target="_blank">Maxim Katz</a> crowdfunding campaign in&nbsp;2014: age, gender and transaction amount of&nbsp;contributors.
